# IA368ii

./: .gitignore  README.md
IA368_ws/config/: .mapper_params_online_async.yaml.swp  mapper_params_online_async.yaml  rtabmap_params.yaml
IA368_ws/src/ia368_pkg/: package.xml  setup.cfg  setup.py  tf_scene.ttt
IA368_ws/src/ia368_pkg/autodocking/: battery_node.py  bumper_and_velocity_node.py  charging_base_node.py  docking_node.py
IA368_ws/src/ia368_pkg/launch/: pega_banana.launch.py  position_control.launch.py  remoteAPI_ROS2_bridge.launch.py  rtabmap_rgbd.launch.py  slam_toolbox.launch.py  yolo_detection.launch.py
IA368_ws/src/ia368_pkg/nav2/: ground_truth_node.py
IA368_ws/src/ia368_pkg/position_control/: Exercise_position_control.ttt  odom_node.py  position_control_node_solution.py  position_control_node_students.py  target_node.py  velocity_node.py
IA368_ws/src/ia368_pkg/rtabmap/: kinect.py  tf_node.py
IA368_ws/src/ia368_pkg/slam_toolbox/: lidar.py  tf_node.py
IA368_ws/src/ia368_pkg/tf_position_control/: kinect.py  odom_node.py  tf_node.py  tf_position_control_node.py  tf_position_control_scene.ttt  velocity_node.py  yolo_3d_detection.py
IA368_ws/src/ia368_pkg/yolo_detector/: dummy_creation.py  kinect.py  tf_scene.ttt  yolo_3d_detection.py
